@@ -4,6 +4,8 @@ version ? (????-??-??):
 
   - now is possible to define password for device's IP (alec)
   - added nodes list (and report) filtering by customer's group (alec)
+  - cash receipts: added document's positions clearing when customer 
+    is changing (alec) 
 
 version 1.9.5 Tagar (2007-02-05):
 
